--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           </h1>
           <p class="b1_desc">
             Gain access to our full library of tutorial along with expert code
-            reviews.
+            reviews
           </p>
           <p class="b1_desc">
             Perfect for any developers who are serious abouthoning their skills.
